# rtti

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Jamroot  README.md  appveyor.yml  install-boost.sh  rtti.kdev4  san-blacklist.txt
allhash/mph/: CMakeLists.txt  archive.hpp  archive.tpp  dispatch.cpp  gen_mph.cpp  gperf.cc  hierarchy.cpp  hierarchy.hpp  make.sh  mmethod.cpp  overloads.cpp  overloads.hpp  parse.cc
allhash/mph/gen_mph/: lookupa.c  perfect.h  recycle.h
allhash/mph/gperf-3.0.4/lib/: Makefile.in
benchmark/: CMakeLists.txt  Jamfile  Makefile  head.hpp  test1.cpp  test2.cpp
include/mmethod/: CMakeLists.txt  config.hpp  declare.hpp  dispatch.hpp  dynamic.hpp  dynamic.tpp  implement.hpp  invoke.hpp  mmethod.hpp  policy.hpp  rtti.hpp  rttifwd.hpp  static.hpp  static.tpp
include/mmethod/ambiguity/: noreturn_policy.hpp  null_policy.hpp
include/mmethod/declare/: call.hpp  call_template.hpp  declare.hpp  helper.hpp  register.hpp  traits.hpp  trampoline.hpp  trampoline_template.hpp
include/mmethod/detail/: access.hpp  attribute.hpp  for_each.hpp  iterate.hpp  mpl.hpp  prefix.hpp  suffix.hpp
include/mmethod/dispatch/: arity_loop.hpp  common.hpp  dispatch.hpp  fetch.hpp  forward.hpp  generate.hpp  initialize.hpp  insert.hpp  seal.hpp  super.hpp
include/mmethod/dynamic/: common.hpp  declare.hpp  declare.tpp  dispatch.hpp  dynamic.hpp  implement.hpp  poles.hpp  regbase.hpp  register.hpp
include/mmethod/export/: CMakeLists.txt  bad_dispatch.hpp  exception.hpp  fetch_pole.hpp  generate.hpp  hash_map.hpp  table.hpp
include/mmethod/export/hash_map/: bucket.hpp  bucket.ipp  hash_map.hpp  hash_map.ipp
include/mmethod/export/table/: fetch_pole.hpp  generate.hpp  table.hpp
include/mmethod/hash/: CMakeLists.txt  array_map.hpp  fetch_pole.hpp  hash_map.hpp  hash_map.ipp  hash_map_base.ipp  path.hpp
include/mmethod/hash/hash_map/: bucket.hpp  bucket.ipp  hash_map.hpp  hash_map.ipp  hash_map.tpp  hash_map_base.hpp  hash_map_base.ipp  hash_map_base.tpp
include/mmethod/implement/: helper.hpp  implement.hpp
include/mmethod/policy/: default_policy.hpp  duplicator.hpp  forward.hpp  noreturn_policy.hpp  utils.hpp
include/mmethod/rtti/: CMakeLists.txt  getter.hpp  implement_traits.hpp  interface.hpp  mixin.hpp
include/mmethod/rtti/foreign/: CMakeLists.txt  foreign.hpp  type_index.hpp
include/mmethod/rtti/getter/: getter.hpp  getter.ipp  traits.hpp
include/mmethod/shared/: basic.hpp  call_traits.hpp  mpl.hpp  mplpack.hpp  tags.hpp  trampoline.hpp
include/mmethod/smart_ptr/: boost_intrusive_ptr.hpp  boost_shared_ptr.hpp  boost_unique_ptr.hpp  stl_shared_ptr.hpp  stl_unique_ptr.hpp
include/mmethod/static/: common.hpp  declare.hpp  declare.tpp  dispatch.hpp  implement.hpp  poles.hpp  print.hpp  regbase.hpp  register.hpp
include/mmethod/table/: CMakeLists.txt  fetch_pole.hpp  generate.hpp  hash_map.hpp  hash_map.ipp  table.hpp
include/mmethod/templates/: common.hpp  declare.hpp  declare.tpp  implement.hpp  regbase.hpp
include/mmethod/traits/: call_traits.hpp  pointer_traits.hpp  tags.hpp
include/mmethod/trampoline/: call.hpp  call_template.hpp  prefix.hpp  trampoline.hpp  trampoline_template.hpp
mmethod/mmethod/: CMakeLists.txt  dispatch.cpp  gperf.cc  hierarchy.cpp  hierarchy.hpp  main.cpp  mmethod.cpp  mph.cc  order_poles.cpp  overloads.hpp
src/: CMakeLists.txt  Jamfile  default_policy.cpp  early.cpp  early.hpp  fetch_pole.cpp  foreach.hpp  hash_map.cpp  manip.hpp  regbase.cpp  util.hpp
src/dispatch/: compute_poles.cpp  dispatch.cpp  forward.hpp  hierarchy.cpp  hierarchy.hpp  klass.cpp  klass.hpp  link_table.cpp  link_table.hpp  max_set.cpp  max_set.hpp  mmethod.cpp  mph.cpp  order_poles.cpp  overloads.cpp  overloads.hpp  product.cpp  product.hpp  product_iteration.hpp  signature.cpp  signature.hpp  topological.cpp  topological.hpp  wanderer.cpp  wanderer.hpp
src/hash_map/: hash_map.cpp  hash_map_base.cpp
src/mmethod/: CMakeLists.txt  array_map.cpp  dynamic.cpp  fetch_pole.cpp  hash_map.cpp  hash_map_base.cpp  regbase.cpp
src/mmethod/dispatch/: dispatch.cpp  hierarchy.hpp  klass.cpp  klass.hpp  mmethod.cpp  mph.cpp  order_poles.cpp  overloads.hpp  signature.cpp
src/mmethod/dynamic/: cache.cpp  impl.hpp  nocache.cpp  pole.cpp  pole_unary.cpp
src/mmethod/hash_map/: hash_map.cpp  hash_map_base.cpp
test/: CMakeLists.txt  Jamfile  Makefile  classes.cpp  classes.hpp  head.hpp  test.cpp  test1.cpp  test2.cpp
test/detail/: CMakeLists.txt  pointer.cpp  smart_ptr.cpp  trampoline.cpp
test/manual/: CMakeLists.txt  duplicate.cpp  manual.cpp  noroot.cpp
test/mmethod/: CMakeLists.txt  ambiguity.cpp  binary.cpp  covariant.cpp  dead.cpp  empty.cpp  generate.cpp  mixed.cpp  predator_prey.cpp  prefetch.cpp  rvreference.cpp  unary.cpp  widget.cpp
test/multifile/: CMakeLists.txt  bar.cpp  baz.cpp  foo.cpp  multifile.cpp  multifile.hpp
test/policy/: CMakeLists.txt  classes.hpp  commutative.cpp  first.cpp  noreturn.cpp  symmetric.cpp  wildcard.cpp
test/rtti/: CMakeLists.txt  basic.cpp  foreign.cpp  multiple.cpp
test/smart_ptr/: CMakeLists.txt  boost_move.cpp  boost_shared_ptr.cpp  copies.cpp  generic.cpp  generic.hpp  intrusive_ptr.cpp  smart_ptr.cpp  unique_ptr.cpp
testsuite/: CMakeLists.txt  Jamfile  classes.hpp  test.cpp
testsuite/basic/: basic.cpp
testsuite/detail/: pointer.cpp  smart_ptr.cpp  trampoline.cpp
testsuite/diamond/: diamond.cpp
testsuite/hierarchy/: hierarchy.cpp
testsuite/mmethod/: binary.cpp  classes.cpp  classes.hpp  covariant.cpp  dead.cpp  dead_base.cpp  diamond.cpp  empty.cpp  generate.cpp  mixed.cpp  predator_prey.cpp  prefetch.cpp  rvreference.cpp  unary.cpp  widget.cpp
testsuite/multifile/: bar.cpp  baz.cpp  foo.cpp  multifile.cpp  multifile.hpp
testsuite/multiple/: multiple.cpp
testsuite/policy/: classes.hpp  commutative.cpp  noreturn.cpp  policy.cpp  wildcard.cpp
testsuite/rtti/: basic.cpp  foreign.cpp  hierarchy.cpp  multiple.cpp
testsuite/smart_ptr/: boost_move.cpp  boost_shared_ptr.cpp  copies.cpp  generic.cpp  generic.hpp  smart_ptr.cpp  unique_ptr.cpp
testsuite/unary/: unary.cpp
(+241 files in other folders)
