#          Copyright Camille Gillot 2012 - 2014.
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)

include_directories(.)

add_subdirectory(detail)
add_subdirectory(library)
add_subdirectory(manual)
add_subdirectory(mmethod)
add_subdirectory(multifile)
add_subdirectory(policy)
add_subdirectory(rtti)
add_subdirectory(smart_ptr)
