#          Copyright Camille Gillot 2012 - 2014.
# Distributed under the Boost Software License, Version 1.0.
#    (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)

add_subdirectory(rtti)
add_subdirectory(detail)
add_subdirectory(export)
add_subdirectory(traits)
add_subdirectory(declare)
add_subdirectory(dispatch)
add_subdirectory(implement)
